[laotou] init: 初始化sqlite

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -11,10 +11,5 @@ READ_TIMEOUT = 60
 WRITE_TIMEOUT = 60
 
 [database]
-TYPE = mysql
-USER = root
-PASSWORD = 1
-#127.0.0.1:3306
-HOST = 127.0.0.1:3306
-NAME = blog
-TABLE_PREFIX = blog_
+TYPE = sqlite
+SQLITE_PATH = staff.db
